# reasoning-about-functions

./: Makefile  README.md  outline.md  reasoning-about-functions.cabal  stack.yaml
docs/: index.html
src/: 00-talk.lhs  01-motivation.lhs  02-reflection.lhs  03-ple.lhs  04-evaluation.lhs
