name:                reasoning-about-functions 
version:             0.1.0.0
synopsis:            Slides for talk about Refinement Reflection and Proof by Logical Evaluation 
-- description:
homepage:            https://github.com/ucsd-progsys/reasoning-about-functions 
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
copyright:           Ranjit Jhala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable homepage 
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       text,
                       bytestring,
                       containers,
                       pandoc,
                       pandoc-types,
                       template,
                       directory,
                       filepath,
                       either

